--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   .tabs{display:flex;gap:6px;position:fixed;left:0;right:0;bottom:10px;max-width:720px;margin:auto;padding:8px;background:transparent;justify-content:space-around}
   .tab-btn{flex:1;padding:10px;border-radius:10px;border:none;background:rgba(255,255,255,0.03);color:var(--muted);font-weight:700}
   .tab-btn.active{background:linear-gradient(90deg,var(--neon-blue),var(--neon-green));color:#011;box-shadow:0 8px 30px rgba(0,191,255,0.12)}
-  /* layout panels */
   .panel{display:none;flex:1;min-height:60vh;margin-bottom:70px}
   .panel.active{display:block}
   iframe{width:100%;height:220px;border-radius:10px;border:0;background:#000}
@@ -52,7 +51,6 @@
   <!-- Panels -->
   <div id="panel-workout" class="panel active card">
     <div id="workout-stage">
-      <!-- The workout UI (exercise video/instructions/timer) -->
       <div id="exercise-title" style="display:flex;justify-content:space-between;align-items:center">
         <strong id="ex-name">Wall Sit</strong>
         <div id="ex-count" class="meta">1/1</div>
@@ -140,24 +138,21 @@ const EXERCISES = [
 ];
 
 const LS_KEYS = {
-  LOGS: 'jn_logs',       // array of {id,timestamp,date,duration,status,note,synced:false}
-  QUEUE: 'jn_queue',     // pending items to sync
+  LOGS: 'jn_logs',
+  QUEUE: 'jn_queue',
   SETTINGS: 'jn_settings'
 };
 
-/* ====== basic helpers ====== */
 const $ = sel => document.querySelector(sel);
 const $$ = sel => Array.from(document.querySelectorAll(sel));
 
 function uid(){ return 'id_'+Date.now()+'_'+Math.floor(Math.random()*10000); }
 function nowISO(){ return (new Date()).toISOString(); }
-function todayDate(){ const d=new Date(); return d.toISOString().slice(0,10); }
+function todayDate(){ return (new Date()).toISOString().slice(0,10); }
 
-/* ====== Local Storage helpers ====== */
 function loadJSON(k, fallback){ try{ const v=localStorage.getItem(k); return v?JSON.parse(v):fallback; }catch(e){return fallback;} }
 function saveJSON(k, v){ localStorage.setItem(k, JSON.stringify(v)); }
 
-/* initialize storage */
 if(!loadJSON(LS_KEYS.LOGS, null)) saveJSON(LS_KEYS.LOGS, []);
 if(!loadJSON(LS_KEYS.QUEUE, null)) saveJSON(LS_KEYS.QUEUE, []);
 if(!loadJSON(LS_KEYS.SETTINGS, null)) saveJSON(LS_KEYS.SETTINGS, { apiUrl:'', secret:'', beep:'on', theme:'dark' });
@@ -172,7 +167,7 @@ async function tryAutoSync(){
   if(!navigator.onLine || !apiUrl || queue.length===0 || syncing) return;
   syncing = true;
   $('#syncStatus').textContent = 'syncing...';
-  for(const item of queue.slice()){ // iterate copy
+  for(const item of queue.slice()){
     try{
       const resp = await fetch(apiUrl, {
         method:'POST',
@@ -180,21 +175,16 @@ async function tryAutoSync(){
         body: JSON.stringify({ secret: secret, payload: item })
       });
       if(resp.ok){
-        // mark as synced in logs
         const logs = loadJSON(LS_KEYS.LOGS, []);
         const found = logs.find(l=>l.id===item.id);
         if(found) found.synced = true;
         saveJSON(LS_KEYS.LOGS, logs);
-        // remove from queue
         let q = loadJSON(LS_KEYS.QUEUE, []);
         q = q.filter(x=>x.id !== item.id);
         saveJSON(LS_KEYS.QUEUE, q);
-      } else {
-        console.warn('sync failed', await resp.text());
       }
     }catch(err){
-      console.warn('sync error', err);
-      break; // network error -> stop trying now
+      break;
     }
   }
   syncing = false;
@@ -202,16 +192,11 @@ async function tryAutoSync(){
   renderTimeline();
 }
 
-/* listen for online */
-window.addEventListener('online', () => {
-  tryAutoSync();
-});
-
-/* manual sync button */
+window.addEventListener('online', tryAutoSync);
 $('#syncNowBtn').addEventListener('click', tryAutoSync);
 
 /* =========================
-   UI: Tabs
+   UI Tabs
    ========================= */
 const panels = {
   workout: $('#panel-workout'),
@@ -219,7 +204,6 @@ const panels = {
   settings: $('#panel-settings')
 };
 function setActiveTab(tab){
-  // hide all
   Object.values(panels).forEach(p=>p.classList.remove('active'));
   $('#tabWorkout').classList.remove('active'); $('#tabProgress').classList.remove('active'); $('#tabSettings').classList.remove('active');
   if(tab==='workout'){ panels.workout.classList.add('active'); $('#tabWorkout').classList.add('active'); }
@@ -231,12 +215,14 @@ $('#tabProgress').addEventListener('click', ()=>setActiveTab('progress'));
 $('#tabSettings').addEventListener('click', ()=>setActiveTab('settings'));
 
 /* =========================
-   Workout player & timers
+   Workout timers & beeps (fixed)
    ========================= */
 let currentIndex = 0;
 let exTimer = null;
 let restTimer = null;
 let exTimeLeft = 0;
+let exerciseActive = false;
+let restActive = false;
 
 function loadExercise(index=0){
   currentIndex = index;
@@ -247,53 +233,52 @@ function loadExercise(index=0){
   $('#ex-instr').textContent = ex.instr;
   $('#ex-timer').textContent = 'Ready';
   $('#rest-area').style.display = 'none';
-  // show Start
   startBtnEnable(true);
 }
+
 function startBtnEnable(enabled){
   $('#startBtn').disabled = !enabled;
   $('#markBtn').disabled = !enabled;
 }
+
 function startExercise(){
   const ex = EXERCISES[currentIndex];
   exTimeLeft = ex.hold;
   $('#ex-timer').textContent = exTimeLeft + 's';
   startBtnEnable(false);
-  // ensure audio context (beeps) allowed by user interactions
-  // clear previous intervals
+  exerciseActive = true;
+
   if(exTimer) clearInterval(exTimer);
   exTimer = setInterval(()=>{
+    if(!exerciseActive) return;
     exTimeLeft--;
+    $('#ex-timer').textContent = exTimeLeft>0? exTimeLeft+'s':'Done!';
     if(exTimeLeft <= 10 && exTimeLeft > 0 && getSetting('beep')==='on') tick();
-    $('#ex-timer').textContent = exTimeLeft>0? exTimeLeft+'s' : 'Done!';
-    if(exTimeLeft<=0){
-      clearInterval(exTimer); exTimer = null;
+    if(exTimeLeft <=0){
+      clearInterval(exTimer); exTimer=null; exerciseActive=false;
       if(getSetting('beep')==='on') finalBeep();
-      // on completion -> auto start rest then sync/save
       onExerciseComplete();
     }
   },1000);
 }
+
+$('#pauseBtn').addEventListener('click', pauseWorkout);
 function pauseWorkout(){
-  // pause timers
+  exerciseActive=false;
+  restActive=false;
   if(exTimer){ clearInterval(exTimer); exTimer=null; }
   if(restTimer){ clearInterval(restTimer); restTimer=null; }
-  // show simple pause by switching to settings? we'll keep simple: show alert-like confirm with Resume/Restart
   const keep = confirm('Paused — press OK to resume, Cancel to restart workout to start screen.');
-  if(keep){ // resume
-    if($('#ex-timer').textContent.endsWith('s')){
-      // attempt to resume with remaining seconds
-      const left = parseInt($('#ex-timer').textContent,10);
-      if(!isNaN(left) && left>0){ exTimeLeft = left; startExercise(); }
-    }
+  if(keep){
+    const left = parseInt($('#ex-timer').textContent,10);
+    if(!isNaN(left) && left>0){ exTimeLeft=left; startExercise(); }
   } else {
     restartToStartScreen();
   }
 }
+
 function onExerciseComplete(){
-  // calculate duration (we store intended hold as duration for now)
   const duration = EXERCISES[currentIndex].hold;
-  // mark local log as completed with time and ask for short note
   const log = {
     id: uid(),
     timestamp: nowISO(),
@@ -305,37 +290,36 @@ function onExerciseComplete(){
     note: '',
     synced: false
   };
-  // ask quick note (simple prompt)
   const userNote = prompt('Quick note (how did it feel? short):','');
   if(userNote !== null) log.note = userNote.substring(0,300);
-  // save locally
+
   const logs = loadJSON(LS_KEYS.LOGS, []);
   logs.unshift(log);
   saveJSON(LS_KEYS.LOGS, logs);
-  // add to sync queue
   const q = loadJSON(LS_KEYS.QUEUE, []);
   q.push(log);
   saveJSON(LS_KEYS.QUEUE, q);
-  // trigger sync attempt
   tryAutoSync();
-  // now start rest screen
   startRestCountdown();
 }
 
 function startRestCountdown(){
-  // show rest UI
   $('#rest-area').style.display = 'block';
   let left = 30;
   $('#rest-timer').textContent = left + 's';
-  // attach skip handlers
-  $('#skipRest').onclick = () => { clearInterval(restTimer); restTimer=null; $('#rest-area').style.display='none'; goNextExercise(); };
-  $('#skipRestRed').onclick = () => { clearInterval(restTimer); restTimer=null; $('#rest-area').style.display='none'; goNextExercise(); };
+  restActive=true;
+
+  $('#skipRest').onclick = skipRestHandler;
+  $('#skipRestRed').onclick = skipRestHandler;
+
+  if(restTimer) clearInterval(restTimer);
   restTimer = setInterval(()=>{
+    if(!restActive) return;
     left--;
-    if(left <= 10 && left > 0 && getSetting('beep')==='on') tick();
     $('#rest-timer').textContent = left+'s';
+    if(left <= 10 && left >0 && getSetting('beep')==='on') tick();
     if(left<=0){
-      clearInterval(restTimer); restTimer=null;
+      clearInterval(restTimer); restTimer=null; restActive=false;
       if(getSetting('beep')==='on') finalBeep();
       $('#rest-area').style.display='none';
       goNextExercise();
@@ -343,12 +327,17 @@ function startRestCountdown(){
   },1000);
 }
 
+function skipRestHandler(){
+  restActive=false;
+  if(restTimer){ clearInterval(restTimer); restTimer=null; }
+  $('#rest-area').style.display='none';
+  goNextExercise();
+}
+
 function goNextExercise(){
   if(currentIndex < EXERCISES.length - 1){
     loadExercise(currentIndex+1);
   } else {
-    // finished full routine — show finish and log a session summary
-    // also save a summary log for the whole routine
     const totalDuration = EXERCISES.reduce((s,e)=>s+e.hold,0);
     const sessionLog = {
       id: uid(),
@@ -363,148 +352,93 @@ function goNextExercise(){
     const logs = loadJSON(LS_KEYS.LOGS, []);
     logs.unshift(sessionLog);
     saveJSON(LS_KEYS.LOGS, logs);
-    // queue
     const q = loadJSON(LS_KEYS.QUEUE, []);
     q.push(sessionLog);
     saveJSON(LS_KEYS.QUEUE, q);
     tryAutoSync();
-    // switch to progress tab automatically
     setActiveTab('progress');
   }
 }
 
-/* Prev / Next buttons */
-$('#prevBtn').addEventListener('click', ()=> {
-  if(currentIndex>0) loadExercise(currentIndex-1);
-});
+$('#prevBtn').addEventListener('click', ()=> { if(currentIndex>0) loadExercise(currentIndex-1); });
 $('#nextBtn').addEventListener('click', ()=> {
-  // pressing Next during exercise triggers rest immediately (same behavior)
-  if(exTimer){ clearInterval(exTimer); exTimer=null; startRestCountdown(); }
+  if(exTimer){ clearInterval(exTimer); exTimer=null; exerciseActive=false; startRestCountdown(); }
   else { startRestCountdown(); }
 });
 $('#startBtn').addEventListener('click', ()=> startExercise());
-$('#markBtn').addEventListener('click', ()=> {
-  // mark done early: clear any running timer and treat as completed
-  if(exTimer){ clearInterval(exTimer); exTimer=null; }
-  onExerciseComplete();
-});
+$('#markBtn').addEventListener('click', ()=> { if(exTimer){ clearInterval(exTimer); exTimer=null; exerciseActive=false; } onExerciseComplete(); });
 
 /* =========================
-   Timeline rendering & export
+   Timeline & export
    ========================= */
 function renderTimeline(){
   const list = loadJSON(LS_KEYS.LOGS, []);
   const container = $('#timelineList');
-  container.innerHTML = '';
-  if(list.length===0){ container.innerHTML = '<div class="meta">No entries yet. Finish a workout to log progress.</div>'; return; }
+  container.innerHTML='';
+  if(list.length===0){ container.innerHTML='<div class="meta">No entries yet. Finish a workout to log progress.</div>'; return; }
   list.forEach(item=>{
-    const div = document.createElement('div');
-    div.className = 'timeline-item';
-    const statusDot = item.status==='completed' || item.status==='session_complete' ? '🟢' : '🔴';
-    div.innerHTML = `<div style="display:flex;justify-content:space-between;align-items:center"><div><strong>${statusDot} ${item.date} — ${item.exerciseName}</strong><div class="meta">Duration: ${item.duration} s • ${item.synced? 'synced' : 'pending'}</div></div><div><button class="btn ghost" data-id="${item.id}" onclick="editNote('${item.id}')">Edit</button></div></div><div style="margin-top:8px">${item.note? item.note : '<span class=\"meta\">No note</span>'}</div>`;
+    const div=document.createElement('div');
+    div.className='timeline-item';
+    const statusDot = item.status==='completed'||item.status==='session_complete'?'🟢':'🔴';
+    div.innerHTML=`<div style="display:flex;justify-content:space-between;align-items:center">
+      <div><strong>${statusDot} ${item.date} — ${item.exerciseName}</strong>
+      <div class="meta">Duration: ${item.duration} s • ${item.synced?'synced':'pending'}</div></div>
+      <div><button class="btn ghost" data-id="${item.id}" onclick="editNote('${item.id}')">Edit</button></div></div>
+      <div style="margin-top:8px">${item.note?item.note:'<span class="meta">No note</span>'}</div>`;
     container.appendChild(div);
   });
 }
 
-/* edit note helper (inline) */
-window.editNote = function(id){
-  const logs = loadJSON(LS_KEYS.LOGS, []);
-  const idx = logs.findIndex(x=>x.id===id);
+window.editNote=function(id){
+  const logs=loadJSON(LS_KEYS.LOGS,[]);
+  const idx=logs.findIndex(x=>x.id===id);
   if(idx===-1) return alert('Not found');
-  const newNote = prompt('Edit note:', logs[idx].note || '');
-  if(newNote !== null){
-    logs[idx].note = newNote;
-    logs[idx].synced = false; // mark for resync
-    saveJSON(LS_KEYS.LOGS, logs);
-    // add to queue
-    const q = loadJSON(LS_KEYS.QUEUE, []);
-    q.push(logs[idx]);
-    saveJSON(LS_KEYS.QUEUE, q);
-    renderTimeline();
-    tryAutoSync();
+  const newNote=prompt('Edit note:',logs[idx].note||'');
+  if(newNote!==null){
+    logs[idx].note=newNote; logs[idx].synced=false;
+    saveJSON(LS_KEYS.LOGS,logs);
+    const q=loadJSON(LS_KEYS.QUEUE,[]); q.push(logs[idx]); saveJSON(LS_KEYS.QUEUE,q);
+    renderTimeline(); tryAutoSync();
   }
 };
 
-/* export CSV */
-$('#exportData').addEventListener('click', ()=>{
-  const logs = loadJSON(LS_KEYS.LOGS, []);
-  if(!logs.length) return alert('No data to export');
-  const rows = [['id','timestamp','date','exercise','duration','status','note','synced']];
-  logs.forEach(r => rows.push([r.id,r.timestamp,r.date,r.exerciseName,r.duration,r.status, (r.note||'').replace(/\n/g,' '), r.synced]));
-  const csv = rows.map(r=>r.map(cell=>`"${String(cell).replace(/"/g,'""')}"`).join(',')).join('\n');
-  const blob = new Blob([csv], {type:'text/csv'});
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement('a'); a.href=url; a.download='jn_logs.csv'; a.click(); URL.revokeObjectURL(url);
-});
-
-/* clear data */
-$('#clearData').addEventListener('click', ()=>{
-  if(confirm('Clear all local data? This cannot be undone.')){ localStorage.removeItem(LS_KEYS.LOGS); localStorage.removeItem(LS_KEYS.QUEUE); saveJSON(LS_KEYS.LOGS,[]); saveJSON(LS_KEYS.QUEUE,[]); renderTimeline(); alert('Cleared'); }
-});
-
 /* =========================
-   Settings load/save
-   ========================= */
-function loadSettingsToUI(){
-  const st = loadJSON(LS_KEYS.SETTINGS, {});
-  $('#apiUrl').value = st.apiUrl || '';
-  $('#apiSecret').value = st.secret || '';
-  $('#beepToggle').value = st.beep || 'on';
-  $('#themeToggle').value = st.theme || 'dark';
-  $('#syncStatus').textContent = 'idle';
-}
-function saveSettingsFromUI(){
-  const st = loadJSON(LS_KEYS.SETTINGS, {});
-  st.apiUrl = $('#apiUrl').value.trim();
-  st.secret = $('#apiSecret').value.trim();
-  st.beep = $('#beepToggle').value;
-  st.theme = $('#themeToggle').value;
-  saveJSON(LS_KEYS.SETTINGS, st);
-  alert('Settings saved');
-}
-$('#apiUrl').addEventListener('change', saveSettingsFromUI);
-$('#apiSecret').addEventListener('change', saveSettingsFromUI);
-$('#beepToggle').addEventListener('change', saveSettingsFromUI);
-$('#themeToggle').addEventListener('change', saveSettingsFromUI);
-
-/* get setting helper */
-function getSetting(k){
-  const st = loadJSON(LS_KEYS.SETTINGS, {});
-  if(k==='beep') return st.beep || 'on';
-  if(k==='apiUrl') return st.apiUrl || '';
-  if(k==='secret') return st.secret || '';
-  return null;
-}
-
-/* =========================
-   Auto-sync on start if online
-   ========================= */
-setTimeout(()=> {
-  loadExercise(0);
-  renderTimeline();
-  // try to auto-sync any queued items after small delay
-  tryAutoSync();
-}, 300);
-
-/* =========================
-   Audio beeps (Web Audio) - simple fallback to short ticks
+   Audio
    ========================= */
 const AudioCtx = window.AudioContext || window.webkitAudioContext;
 const audioCtx = AudioCtx ? new AudioCtx() : null;
-function tick(){ if(!audioCtx) return; const o = audioCtx.createOscillator(); const g = audioCtx.createGain(); o.type='sine'; o.frequency.value=900; g.gain.value=0.06; o.connect(g); g.connect(audioCtx.destination); o.start(); setTimeout(()=>o.stop(),100); }
-function finalBeep(){ if(!audioCtx) return; const o = audioCtx.createOscillator(); const g = audioCtx.createGain(); o.type='sine'; o.frequency.value=1200; g.gain.value=0.12; o.connect(g); g.connect(audioCtx.destination); o.start(); setTimeout(()=>o.stop(),300); }
+function tick(){ if(!audioCtx) return; const o=audioCtx.createOscillator(); const g=audioCtx.createGain(); o.type='sine'; o.frequency.value=900; g.gain.value=0.06; o.connect(g); g.connect(audioCtx.destination); o.start(); setTimeout(()=>o.stop(),100);}
+function finalBeep(){ if(!audioCtx) return; const o=audioCtx.createOscillator(); const g=audioCtx.createGain(); o.type='sine'; o.frequency.value=1200; g.gain.value=0.12; o.connect(g); g.connect(audioCtx.destination); o.start(); setTimeout(()=>o.stop(),300);}
 
 /* =========================
-   PWA: register service worker if present
+   Settings
    ========================= */
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('service-worker.js').catch(e=>console.warn('SW failed',e));
+function loadSettingsToUI(){
+  const st=loadJSON(LS_KEYS.SETTINGS,{});
+  $('#apiUrl').value=st.apiUrl||''; $('#apiSecret').value=st.secret||'';
+  $('#beepToggle').value=st.beep||'on'; $('#themeToggle').value=st.theme||'dark';
+  $('#syncStatus').textContent='idle';
 }
+function saveSettingsFromUI(){
+  const st=loadJSON(LS_KEYS.SETTINGS,{});
+  st.apiUrl=$('#apiUrl').value.trim(); st.secret=$('#apiSecret').value.trim();
+  st.beep=$('#beepToggle').value; st.theme=$('#themeToggle').value;
+  saveJSON(LS_KEYS.SETTINGS,st); alert('Settings saved');
+}
+$('#apiUrl').addEventListener('change',saveSettingsFromUI);
+$('#apiSecret').addEventListener('change',saveSettingsFromUI);
+$('#beepToggle').addEventListener('change',saveSettingsFromUI);
+$('#themeToggle').addEventListener('change',saveSettingsFromUI);
+function getSetting(k){ const st=loadJSON(LS_KEYS.SETTINGS,{}); if(k==='beep')return st.beep||'on'; if(k==='apiUrl')return st.apiUrl||''; if(k==='secret')return st.secret||''; return null;}
 
-/* allow keyboard navigation (desktop testing) */
-window.addEventListener('keydown',(e)=>{ if(e.key==='ArrowLeft') $('#prevBtn').click(); if(e.key==='ArrowRight') $('#nextBtn').click(); });
+/* =========================
+   Init
+   ========================= */
+setTimeout(()=>{ loadExercise(0); renderTimeline(); tryAutoSync(); },300);
 
-/* expose tryAutoSync to window for debugging */
+/* Service Worker */
+if('serviceWorker' in navigator){ navigator.serviceWorker.register('service-worker.js').catch(e=>console.warn('SW failed',e)); }
+window.addEventListener('keydown',(e)=>{ if(e.key==='ArrowLeft')$('#prevBtn').click(); if(e.key==='ArrowRight')$('#nextBtn').click(); });
 window.tryAutoSync = tryAutoSync;
 </script>
 </body>
